--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 version: "3"
 services:
   client:
-    build:
-      context: ./client
-      dockerfile: Dockerfile
+    build: ./client
+    command: npm start
     ports:
       - 4000:4000
     environment:
@@ -11,5 +10,31 @@ services:
     volumes:
       - ./client:/usr/src/app
       - /usr/src/app/node_modules
-    # links:
-    #   - server
+  nginx:
+    image: nginx:latest
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - 80:80
+    links:
+      - client
+      - api
+  api:
+    build: ./api
+    command: bundle exec rails s -p 5000 -b 0.0.0.0
+    environment:
+      - PORT=5000
+    volumes:
+      - ./api:/usr/src/api
+      - /usr/src/api/tmp
+      - /usr/local/bundle
+    environment:
+      - BUNDLE_PATH=/usr/local/bundle
+    links:
+      - postgres
+  postgres:
+    image: postgres:latest
+    volumes:
+    - /var/lib/postgresql/data
+
+
