--- a/api/.gitignore
+++ b/api/.gitignore
@@ -14,3 +14,9 @@
 !/tmp/.keep
 
 .byebug_history
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+*.pem
